# niri-thing-doer

./: Cargo.toml  rules.kdl
src/: error.rs  kdl_utils.rs  main.rs  window_rule.rs
